UI(simon) (#6)
* added first version of ui

* file picker added on button click